Fix modal on mobile landscapes

--- a/app/scss/_modal.scss
+++ b/app/scss/_modal.scss
@@ -12,10 +12,6 @@
     }
 
     .modal-fade-screen .modal-inner {
-      @include media($medium-screen) {
-        top: 0.5em;
-      }
-
       @include media($large-screen) {
         top: 0.5em;
       }
@@ -28,10 +24,6 @@
     opacity: 0;
     visibility: hidden;
     z-index: 99999999999;
-
-    @include media($medium-screen) {
-      padding-top: 10em;
-    }
 
     @include media($large-screen) {
       padding-top: 10em;
@@ -51,13 +43,6 @@
     background: $white;
     margin: 0;
     overflow: auto;
-
-    @include media($medium-screen) {
-      position: relative;
-      margin: auto;
-      max-height: 70%;
-      width: 60%;
-    }
 
     @include media($large-screen) {
       position: relative;
@@ -107,6 +92,10 @@
     .modal-buttons {
       padding-top: $content-gutter;
       text-align: center;
+
+     @include media($medium-screen) {
+        .button { width: auto; }
+      }
 
       @include media($large-screen) {
         .button {
